--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title></title>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<title></title>
 	
 </head>
 <body>
+	<!-- Google Tag Manager --><noscript>
+	<iframe src="//www.googletagmanager.com/ns.html?id=GTM-WF6BPG"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WF6BPG');</script><!-- End Google Tag Manager -->
 
-	<p>Hello my name is Miguel Antunes.</p>
+<p>Hello my name is Miguel Antunes.</p>
 
-	<p>and I'm learning github features.</p>
+<p>and I'm learning github features.</p>
 
 </body>
 </html>
