--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- Start of Main Title + Intro -->
     <div class="huge-title">
 
-        <img src="img/headshot.jpg" alt="Miguel Antunes" class="headshot wow tada" data-wow-delay="3s" data-wow-offset="80" data-wow-duration="1s">
+        <img src="img/cropped_391200_465823170119337_293434867_n.jpg" alt="Miguel Antunes" class="headshot wow tada" data-wow-delay="3s" data-wow-offset="80" data-wow-duration="1s">
         <h1 class="wow bounceInDown" data-wow-offset="80" data-wow-duration="3s">Miguel Antunes</h1>
 
         <!-- Start of Owl Testimonial Carousel -->
