--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 <p>Provided with the product is this fully functional contact PHP based form with inline validation and success message. Invalid entries / missing fields will display a notice next to the incomplete field. On success a user defined message is neatly displayed as the form 'rolls-up'. Completed entries are emailed directly to your desired email account. PHP Mail() Function must be active on your hosting server, but that's pretty standard!</p>
 
                 <!-- Begin Contact Form -->
-                <form action="http://kelter.outsystemscloud.com/aboutme/mailer.aspx" id="contact_form" method="post" class="wow fadeInUpBig" data-wow-offset="80" data-wow-duration="2s">
+                <form action="http://kelter.outsystemscloud.com/contactme/mailer.aspx" id="contact_form" method="post" class="wow fadeInUpBig" data-wow-offset="80" data-wow-duration="2s">
 
                     <p>
                     <label>Name</label>
