--- a/qlik/index.html
+++ b/qlik/index.html
@@ -13,9 +13,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta http-equiv="cleartype" content="on">
     <!--Add host to these 3 links if the mashup is on another webserver than qlik sense static content-->
-    <link rel="stylesheet" href="/qlikui.css">
-    <link rel="stylesheet" href="/client.css" media="all">
-    <script src="/require.js"></script>
+    <link rel="stylesheet" href="/qlik/qlikui.css">
+    <link rel="stylesheet" href="/qlik/client.css" media="all">
+    <script src="/qlik/require.js"></script>
     <script src="/qlik/qlik.js"></script>
     <style>
     article.qvobject {
