--- a/qlik/index.html
+++ b/qlik/index.html
@@ -1,39 +1,15 @@
 <!doctype html>
 <html>
-
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Qlik Sense: Mashup</title>
-    <meta charset="utf-8">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta http-equiv="cleartype" content="on">
-    <!--Add host to these 3 links if the mashup is on another webserver than qlik sense static content-->
-    <link rel="stylesheet" href="/qlik/qlikui.css">
-    <link rel="stylesheet" href="/qlik/client.css" media="all">
-    <script src="/qlik/require.js"></script>
-    <script src="/qlik/qlik.js"></script>
-    <style>
-    article.qvobject {
-        position: absolute;
-        overflow: hidden;
-        padding: 10px;
-    }
-    </style>
-</head>
-
-<body style="overflow:auto">
-    <div id="CurrentSelections" class="qvobjects" style="position:relative; top:0; left:0; width:100%; height:35px;"> </div>
-    <div id="QV01" style="position: absolute; top: 50px; left: 20px; width: 200px; height: 200px;" class="qvobject"></div>
-    <div id="QV02" style="position: absolute; top: 50px; left: 320px; width: 400px; height: 200px;" class="qvobject"></div>
-    <div id="QV03" style="position: absolute; top: 300px; left: 20px; width: 200px; height: 200px;" class="qvobject"></div>
-    <div id="QV04" style="position: absolute; top: 300px; left: 320px; width: 400px; height: 200px;" class="qvobject"></div>
-    <div id="QV05" style="position: absolute; top: 550px; left: 20px; width: 200px; height: 200px;" class="qvobject"></div>
-    <div id="QV06" style="position: absolute; top: 550px; left: 320px; width: 400px; height: 200px;" class="qvobject"></div>
-</body>
-
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Untitled</title>
+ 
+        <link rel="author" href="humans.txt">
+    </head>
+    <body>
+        
+       <iframe src='https://insights.outsystems.net/single?appid=2a94c2f7-f44a-4c53-82ce-881bf8b03e10&obj=deeca683-a09a-4098-8016-466ecbbe67ca&opt=nointeraction&select=clearall' frameborder='0'></iframe>
+    </body>
 </html>
