--- a/qlik/index.html
+++ b/qlik/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         
-       <iframe src='https://insights.outsystems.net/single?appid=2a94c2f7-f44a-4c53-82ce-881bf8b03e10&obj=deeca683-a09a-4098-8016-466ecbbe67ca&opt=nointeraction&select=clearall' frameborder='0'></iframe>
+       <iframe src='https://insights.outsystems.net/single?appid=2a94c2f7-f44a-4c53-82ce-881bf8b03e10&obj=deeca683-a09a-4098-8016-466ecbbe67ca&opt=currsel&select=clearall' frameborder='0'></iframe>
     </body>
 </html>
