--- a/qlik/index.html
+++ b/qlik/index.html
@@ -2,9 +2,7 @@
 <html style="
     height: 100%;
 ">
-    <head style="
-    height: 100%;
-">
+    <head
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +10,9 @@
  
         <link rel="author" href="humans.txt">
     </head>
-    <body>
+    <body  style="
+    height: 100%;
+">>
         
 <iframe src='https://insights.outsystems.net/single?appid=2a94c2f7-f44a-4c53-82ce-881bf8b03e10&sheet=a1457652-2bf1-4a25-8ce8-86b50419a1e3&opt=currsel&select=clearall' frameborder='0' style="
     height: 100%;
